Fix formatting in Capstone-Project.ipynb

--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -1779,7 +1779,7 @@
     "- Terapkan dua jam sibuk (siang & sore).\n",
     "- Ulangi analisis SLA dan tunjukkan apakah sistem butuh kasir lebih banyak dibanding baseline.\n",
     "\n",
-    "## Kasir heterogen (opsional)\n",
+    "## Kasir heterogen \n",
     "- Uji skenario 1 kasir cepat.\n",
     "- Diskusikan dampak pada mean wait dan terutama P95 (pengalaman pelanggan terburuk).\n",
     "\n",
